testsuite/tests/patsyn/should_fail/T15685.stderr

T15685.hs:13:24: error:
    • Could not deduce (k ~ [k0])
      from the context: as ~ (a : as1)
        bound by a pattern with constructor:
                   Here :: forall {k} (f :: k -> *) (a :: k) (as :: [k]).
                           f a -> NS f (a : as),
                 in a pattern synonym declaration
        at T15685.hs:13:19-26
      ‘k’ is a rigid type variable bound by
        the inferred type of HereNil :: NS f as
        at T15685.hs:13:9-15
    • In the pattern: Nil
      In the pattern: Here Nil
      In the declaration for pattern synonym ‘HereNil’
    Suggested fix: Consider giving ‘HereNil’ a type signature
